--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -6,7 +6,7 @@
     </h1>
 
     <!-- Blog Post -->
-    {% for post in posts %}
+    {% for post in paginator %}
         <div class="card mb-4">
             {% if post.postImage is not null %}
                 <img class="card-img-top" src="{{ asset(post.postImage, 'file_upload') }}" alt="{{ post.title }}">
@@ -26,11 +26,15 @@
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center mb-4">
-        <li class="page-item">
-            <a class="page-link" href="#">&larr; Older</a>
-        </li>
-        <li class="page-item disabled">
-            <a class="page-link" href="#">Newer &rarr;</a>
-        </li>
+        {% if page - 1 > 0 %}
+            <li class="page-item">
+                <a class="page-link" href="{{ path('app_post_index', {'page': page - 1}) }}">&larr; Older</a>
+            </li>
+        {% endif %}
+        {% if page + 1 <= max_page %}
+            <li class="page-item">
+                <a class="page-link" href="{{ path('app_post_index', {'page': page + 1}) }}">Newer &rarr;</a>
+            </li>
+        {% endif %}
     </ul>
 {% endblock %}
