--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,8 +1,16 @@
 {% extends 'base.html.twig' %}
-
+{% import 'macro.html.twig' as macros %}
 {% block title %}Post{% endblock %}
 
 {% block content %}
+    {# read and display all flash messages #}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
     <!-- Title -->
     <h1 class="mt-4">{{ post.title }}</h1>
 
@@ -33,7 +41,7 @@
     <!-- Comments Form -->
     <div class="card my-4">
         <h5 class="card-header">Leave a Comment:</h5>
-        <div class="card-body">
+        <div class="card-body pr-5">
             {{ form_start(comment_form) }}
             <div class="my-custom-class-for-errors">
                 {{ form_errors(comment_form) }}
@@ -49,38 +57,21 @@
                 {{ form_row(comment_form.message) }}
             </div>
             <div class="form-group pl-5">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                {{ form_row(comment_form.submit) }}
             </div>
             {{ form_end(comment_form) }}
         </div>
     </div>
 
     <!-- Single Comment -->
-    {% for comment in post.comments %}
-        <div class="media mb-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-                <h5 class="mt-0">{{ comment.author }}</h5>
-                {{ comment.message }}
-                <button class="btn btn-sm btn-link js-replay-comment-btn" data-post-id="{{ post.id }}"
-                        data-parent-id="{{ comment.id }}">回复
-                </button>
-                {% for children in comment.children %}
-                    <div class="media mt-4">
-                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                        <div class="media-body">
-                            <h5 class="mt-0">children.author</h5>
-                            children.message
-                        </div>
-                    </div>
-                    <button class="btn btn-sm btn-link js-replay-comment-btn" data-post-id="{{ post.id }}"
-                            data-parent-id="{{ children.id }}">回复
-                    </button>
-                {% endfor %}
-            </div>
+    {% for comment in pagination %}
+        <div class="mb-4">
+            {{ macros.show_comments(comment, post.id) }}
         </div>
     {% endfor %}
-
+    <div class="navigation">
+        {{ knp_pagination_render(pagination) }}
+    </div>
     <!-- Comment with nested comments -->
     {#    <div class="media mb-4"> #}
     {#        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""> #}
